# chat4000-pyvodozemac

./: .gitignore  BUILD.md  Cargo.toml  PLAN.md  README.md  pyproject.toml
.github/workflows/: release.yml
python/chat4000_pyvodozemac/: __init__.py  __init__.pyi
src/: errors.rs  lib.rs  machine.rs  requests.rs  store.rs
tests/: marshaling.rs
